# github-actions-autodocs

./: ACTION.md  Cargo.toml  README.md  action.yml
.github/workflows/: ci.yml
src/: cli.rs  main.rs  models.rs
