[package]
name = "github-actions-autodocs"
version = "0.1.0"
edition = "2021"

bin = "gca"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = { version = "1.27.0", features = ["full"] }
