[package]
name = "github-actions-autodocs"
version = "0.1.3"
edition = "2021"
description = "Generate a basic readme for the given github action"
license = "MIT"
repository = "https://github.com/rawnly/github-actions-autodocs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
colored = { version = "2.0.0" }
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = { version = "1.27.0", features = ["full"] }
